# cpp-moments

./: README.md
LC3-virtual-machine/: CMakeLists.txt  README.md  lc3.c  main.c  makefile  px_log.h
arm-neon-share-fix/: CMakeLists.txt  README.md  main.cpp
autotimer_cpp_python/: AutoTimer的C++和Python实现.md  autotimer.hpp
cache_info/: CMakeLists.txt  README.md  get_cpu_info.cpp
cache_info/build-cpu-info/: android-arm32-build.sh  android-arm64-build.sh
canny_edge_detection/: README.md
cast_operator_for_cout_obj/: entity.cpp  fraction_v3.cpp
class_function_to_symbols/: 3.函数重载.md  complex.cpp  complex.s  makefile
comma_init/: README.md  v1.cpp  v2.cpp  v3.cpp  v4.cpp
complex/: 4.参数传递和返回值.md  README.md  complex-test.cpp  complex.cpp  complex.hpp  makefile  point.cpp
conversion_operator/: README.md  foo.cpp  makefile
crashdown/: CMakeLists.txt  README.md  a.out  compile-opencv4.sh  main.cpp
devnotes/: building-tools.md  coding-style.md  copyright.md  debugging-philosiphy.md  debugging-tools.md  home.md  image-tools.md  libraries.md  memory-inspect.md  minimal-reproducible-example.md  online-tools.md  sanitizer.md  versioning.md
devnotes/legacy/: AddressSanitizer.md  C_Runtime_Library.md  CleanCode.md  README.md  新手出门装.md  枚举型作为unordered_map的key.md  编译阶段打印宏定义取值.md  随机数.md
doxygen_example/docs/: Doxyfile.in  root.md
doxygen_example/src/: faq.md  hello.h  intro.md  tutorial.md
ffmpeg-videoio-aarch64-none-linux-gnu/: OpenCV-video-ffmpeg.md
ffmpeg-videoio-aarch64-none-linux-gnu/ffmpeg/: ffmpeg-config.cmake  gen.py  my_start.sh
ffmpeg-videoio-aarch64-none-linux-gnu/opencv/: aarch64-none-linux-gnu.sh  aarch64-none-linux-gnu.toolchain.cmake
findContours/: OpenCV-Notes.md
function-pointer/: main.cpp
gabor/: CMakeLists.txt  README.md  testbed.cpp  testbed2.cpp
gdb_basic/: .gdb_history  README.md  gdb_tutorial.md  hello.c  makefile  安装kdbg.md
gdb_middle/: README.md
gdb_other/: readme.md
gdb_segfault_vptr/: CMakeLists.txt  README.md  main.cpp  virtual.cpp
inline-cpp/: README.md  big.cpp  complex.cpp  hello  hello.cpp  main.cpp  makefile  readme-old.md  small.cpp  util.h
lambda_and_std_function/: README.md
library-order-in-static-linking/: README.md
ncnn_opencv_mat_multihread/: CMakeLists.txt  README.md  ncnn_test.cpp  opencv_test.cpp
numbers/: README.md
ocl_ndrange_illustrate/: README.md  main.cpp  makefile
openmp_example/: CMakeLists.txt  autotimer.hpp  cpu.cpp  cpu.h  hello.cpp  main.cpp  makefile  notes.md  option.cpp  option.h  platform.h
openmp_example/get_openmp_version/: README.md  main.cpp
operator_conversion/: Box.cpp  Kun.cpp  README.md  fraction_v1.cpp  fraction_v2.cpp  fraction_v4.cpp
python-jit-compare/: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  makefile  neon2sse.h  neon_mathfun.h  neon_mathfun_tanh.h  requirements.txt
qtest/: .clang-tidy  .gitignore  README.md  v12_gtest.cpp  v13_qtest.cpp  v14_qtest.cpp  v21_qtest.cpp  v22_gtest.cpp  v31_qtest.cpp  v41_qtest.cpp  v51_qtest.cpp
sobel/: README.md  sobel.cpp
stacking_image_layers/: README.md  main.cpp  makefile
understand_megcc/: README.md  autotimer.hpp  build_example_test.sh  convert_model.sh  download_mge_model.sh  main.cpp  run_on_device.sh
use_ccache/: README.md  build-ncnn-mac-arm64.sh
use_clang-tidy/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
use_clangd/: README.md
utest.h_break_down/v0-bd/: .gitignore  CMakeLists.txt  README.md  filter_test.cpp  makefile  v11_gtest.cpp  v15_qtest.cpp  v16_gtest.cpp  v16_qtest.cpp  v21_qtest.cpp  v21_utest.c
virtual-machine-in-80-LOC/: C语言实现虚拟机.md  main.c  makefile
write_a_gtest_like_unittest_library/: CMakeLists.txt  README.md  filter_test.cpp  main.cpp  test.cpp  v11_qtest.cpp  v13_utest.cpp  v16_gtest.cpp  v16_qtest.cpp  v51_gtest.cpp
write_a_gtest_like_unittest_library/v0/: main.cpp
write_a_gtest_like_unittest_library/v0-bd/: .gitignore  README.md  output_dir.cmake  v12_qtest.cpp  v13_gtest.cpp  v14_gtest.cpp  v15_gtest.cpp  v21_gtest.cpp  v22_qtest.cpp  v31_qtest.cpp  v41_qtest.cpp  v51_qtest.cpp
write_a_gtest_like_unittest_library/v0/test/: CMakeLists.txt  utest.h
write_a_unittest_library/: .clangd  .gitignore  CMakeLists.txt  README.md  gft_demo.cpp  makefile  testbed  utest_v1.cpp  utest_v2.cpp  utest_v3.cpp  utest_v4.cpp  utest_v5.cpp  utest_v6.cpp  utest_v6_gtest.cpp  utest_v7.cpp  utest_v7_demo.cpp  utest_v8.cpp  utest_v9.cpp  utest_v9_demo.cpp  utest_v9_ref.cpp  utest_v9_try0.cpp  utest_v9_try1.cpp  utest_v9_try2.cpp
yuv420sp_rgb_convert/: README.md
